--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
     </div>
     <!-- <script src="function.js"></script> -->
-    <script src="closures.js"></script>
+    <script src="apply_bind_call.js"></script>
 </body>
 </html>
