defined and undifined

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
     </div>
     <!-- <script src="function.js"></script> -->
-    <script src="bind.js"></script>
+    <script src="defined_undefined.js"></script>
 </body>
 </html>
